HelloUltraviolet/Fixtures/RejectedSource/Permissions/SharedMutationWithoutKey/Source/Main.uv
//! Rejected permission specimen for mutating a shared path without a key.

public record PermissionDiagnosticCell {
    public value: i32
}

public procedure sharedMutationWithoutKeyReference() -> i32 {
    var cell: shared PermissionDiagnosticCell = PermissionDiagnosticCell { value: 1 }
    cell.value = 2
    return cell.value + 0
}
